--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,18 @@
 {
   "compilerOptions": {
+    "moduleResolution": "node",
+    "typeRoots": ["./node_modules/@types"],
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"]
+    }
   }
 }
