--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@types/jest": "^24.0.19",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "@types/react-intl": "^3.0.0",
@@ -20,6 +21,9 @@
     "eslint-loader": "^3.0.2",
     "eslint-plugin-react": "^7.16.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "react-hooks-testing-library": "^0.6.0",
+    "react-test-renderer": "^16.10.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
@@ -28,6 +32,7 @@
     "start": "webpack --mode development",
     "dev": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "lint": "eslint './src/**/*.ts*'"
+    "lint": "eslint './src/**/*.ts*'",
+    "test": "jest --watch"
   }
 }
