--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
+    "sourceMap": true,
     "baseUrl": ".",
     "paths": {
       "*": ["src/*"]
